correct aligning on footer button

--- a/source/stylesheets/support/_button.scss
+++ b/source/stylesheets/support/_button.scss
@@ -9,6 +9,10 @@
 
   a {
     color: $color-grey;
+
+    &:hover{
+      color: $color-white;
+    }
   }
 
   @include media($tablet) {
