--- a/source/stylesheets/views/shared/_body.scss
+++ b/source/stylesheets/views/shared/_body.scss
@@ -45,3 +45,7 @@ body {
     width: 100%;
   }
 }
+
+.footer-description{
+  height: em(85);
+}
